# swift-models

./: .gitignore  CMakeLists.txt  DenseNet.swift  Overview.md  Package.resolved  Package.swift  README.md
Batcher/: Backend.swift  Batcher.swift  CMakeLists.txt  Collatable.swift
Checkpoints/: CMakeLists.txt  CheckpointIndexReader.swift  CheckpointReader.swift  CheckpointWriter.swift  Checkpointable.swift  README.md  SnappyDecompression.swift
Checkpoints/Protobufs/: tensor_shape.pb.swift  tensor_slice.pb.swift  types.pb.swift
Datasets/: CMakeLists.txt  DatasetUtilities.swift  DatasetUtils.swift  ImageClassificationDataset.swift  ImageSegmentationDataset.swift  LabeledExample.swift  LanguageModelDataset.swift  ObjectDetectionDataset.swift  TensorPair.swift
Datasets/BostonHousing/: BostonHousing.swift
Datasets/CIFAR10/: CIFAR10.swift  CIFARExample.swift  OldCIFAR10.swift
Datasets/CIFAR100/: CIFAR100.swift
Datasets/COCO/: COCO.swift  COCODataset.swift  COCOVariant.swift
Datasets/CoLA/: Batchable.swift  CoLA.swift  DataUtilities.swift  TextBatch.swift
Datasets/Coco/: COCO.swift  COCOMask.swift  COCOMetadata.swift  Coco.swift  CocoMask.swift  CocoMetadata.swift
Datasets/HoneyBeeDance/: HoneyBeeDance.swift
Datasets/Imagenette/: ImageNet.swift  Imagenet.swift  Imagenette.swift  Imagewoof.swift
Datasets/MNIST/: FashionMNIST.swift  KuzushijiMNIST.swift  MNIST.swift  MNISTDatasetHandler.swift  OldFashionMNIST.swift  OldKuzushijiMNIST.swift  OldMNIST.swift  OldMNISTDatasetHandler.swift
Datasets/MovieLens/: MovieLens.swift
Datasets/OxfordIIITPets/: OxfordIIITPets.swift
Datasets/SNLI/: SNLI.swift
Datasets/TextUnsupervised/: TextUnsupervised.swift
Datasets/WMT2014/: WMT2014.swift
Datasets/WikiText2/: WikiText2.swift
Datasets/WordSeg/: Phrase.swift  WordSegDataset.swift  WordSegRecord.swift
Examples/: CMakeLists.txt
Examples/BERT-CoLA/: CMakeLists.txt  CoLATraining.swift  README.md  main.swift
Examples/BERT-CoLa/: README.md
Examples/Bert-CoLA/: README.md  main.swift
Examples/BigTransfer-CIFAR100/: CMakeLists.txt  README.md  main.swift
Examples/COCO/: CMakeLists.txt  main.swift
Examples/Coco/: main.swift
Examples/Custom-CIFAR10/: CMakeLists.txt  README.md  main.swift
Examples/Fractals/: CMakeLists.txt  ComplexTensor.swift  ImageUtilities.swift  JuliaSet.swift  MandelbrotSet.swift  README.md  main.swift
Examples/GPT2-Inference/: CMakeLists.txt  README.md  main.swift
Examples/GPT2-WikiText2/: CMakeLists.txt  README.md  main.swift
Examples/GrowingNeuralCellularAutomata/: CellRule.swift  CellRules.swift  GrowingNeuralCellularAutomata.ipynb  README.md  SamplePool.swift  main.swift
Examples/LeNet-MNIST/: CMakeLists.txt  README.md  main.swift
Examples/LeNet-MNIST-XLA/: README.md  main.swift
Examples/MobileNet-Imagenette/: README.md  main.swift
Examples/MobileNetV1-Imagenette/: CMakeLists.txt  README.md  main.swift
Examples/MobileNetV2-Imagenette/: CMakeLists.txt  README.md  main.swift
Examples/NeuMF-MovieLens/: CMakeLists.txt  README.md  main.swift
Examples/Notebooks/: Imagenette.ipynb  LanguageModel.ipynb
Examples/PersonLab/: README.md  decoder.swift  heads.swift  main.swift  personlab.swift
Examples/Personlab/: CLI.swift  README.md  backbone.swift  decoder.swift  heap.swift  main.swift  personlab.swift  pose.swift  swiftcv.swift  tensor.swift  utils.swift
Examples/Regression-BostonHousing/: CMakeLists.txt  README.md  main.swift
Examples/ResNet-CIFAR10/: CMakeLists.txt  README.md  main.swift
Examples/ResNet50-ImageNet/: CMakeLists.txt  README.md  main.swift
Examples/ResNet50-Imagenet/: CMakeLists.txt  main.swift
Examples/Shallow-Water-PDE/: ArrayLoopSolution.swift  README.md  Solution.swift  TensorConvSolution.swift  TensorLoopSolution.swift  TensorSliceSolution.swift  Visualization.swift  main.swift
Examples/SqueezeNet-Imagenette/: README.md  main.swift
Examples/Tabular/: CMakeLists.txt  README.md
Examples/Transformer-Translation/: WMT2104Training.swift  main.swift
Examples/VGG-Imagewoof/: CMakeLists.txt  README.md  main.swift
Examples/WordSeg/: CMakeLists.txt  README.md  WordSegCommand.swift  WordSegSettings.swift  main.swift  smalldata.txt
FastStyleTransfer/: CMakeLists.txt  README.md
FastStyleTransfer/Demo/: ColabDemo.ipynb  Helpers.swift  main.swift
FastStyleTransfer/Layers/: Helpers.swift  Normalization.swift
FastStyleTransfer/Models/: TransformerNet.swift
FastStyleTransfer/Utility/: ImportableLayer.swift  Resize.swift  Tensor+Additions.swift  Tensor.swift
ImageLoader/ImageOps/: CMakeLists.txt  ImageOps.swift
ImageLoader/JPEGImageOperations/: CMakeLists.txt  JPEGImageOperations.swift
MiniGo/: CMakeLists.txt  Package.swift  README.md  main.swift
MiniGo/GameLib/: Board.swift  BoardState.swift  Color.swift  GameConfiguration.swift  LibertyTracker.swift  Position.swift
MiniGo/Models/: GoModel.swift  MiniGoCheckpointReader.swift  ModelUtilities.swift  PythonCheckpointReader.swift
MiniGo/Play/: PlayOneGame.swift
MiniGo/Strategies/: HumanPolicy.swift  Policy.swift  RandomPolicy.swift
Support/: AnimatedImage.swift  AnyLayer.swift  AnyLayerTangentVector.swift  BijectiveDictionary.swift  CMakeLists.txt  File.swift  FileManagement.swift  FileSystem.swift  FoundationFileSystem.swift  GIF.swift  Image.swift  LabeledData.swift  Stderr.swift  SugarLayer.swift
TensorBoard/: CMakeLists.txt  EventLogger.swift  README.md  SummaryWriter.swift  Support.swift  TensorBoardWriter.swift
Tests/: CMakeLists.txt  LinuxMain.swift
TrainingLoop/: CMakeLists.txt  LossFunctions.swift  Metrics.swift  Progress.swift  TrainingLoop.swift  TrainingProgress.swift  TrainingStatistics.swift
Transformer/: CMakeLists.txt  CheckpointWriter.swift  Model.swift  Operators.swift  PythonCheckpointReader.swift  README  README.md  TransformerLoop.swift  encoder.py  main.swift
pix2pix/: CLI.swift  CMakeLists.txt  CheckpointReader.swift  CheckpointWriter.swift  Dataset.swift  Discriminator.swift  Generator.swift  Layers.swift  Package.swift  PythonCheckpointReader.swift  README.md  Utils.swift  main.swift
(+456 files in other folders)
