add_subdirectory(Custom-CIFAR10)
add_subdirectory(ResNet-CIFAR10)
add_subdirectory(LeNet-MNIST)
add_subdirectory(MobileNetV1-Imagenette)
add_subdirectory(MobileNetV2-Imagenette)
add_subdirectory(Regression-BostonHousing)
add_subdirectory(BERT-CoLA)
add_subdirectory(GPT2-WikiText2)
add_subdirectory(NeuMF-MovieLens)
add_subdirectory(GPT2-Inference)
add_subdirectory(WordSeg)
add_subdirectory(Fractals)
add_subdirectory(VGG-Imagewoof)
